objects/QuoteDocumentGenerationSettings__mdt.object
<CustomObject>
    <fields>
        <fullName>columnFieldApiNames__c</fullName>
        <label>columnFieldApiNames</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>columnNames__c</fullName>
        <label>columnNames</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>excludedProductCodes__c</fullName>
        <label>excludedProductCodes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>includedProductCodes__c</fullName>
        <label>includedProductCodes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sectionDescriptionText__c</fullName>
        <label>sectionDescriptionText</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sectionTitle__c</fullName>
        <label>sectionTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Matrix Table Header</fullName>
                    <default>true</default>
                    <label>Matrix Table Header</label>
                </value>
                <value>
                    <fullName>Quote Line Table Header</fullName>
                </value>
                <value>
                    <fullName>Static Text</fullName>
                </value>
                <value>
                    <fullName>Matrix Table Column</fullName>
                </value>
                <value>
                    <fullName>Line Table Columns - Proposal</fullName>
                </value>
                <value>
                    <fullName>Line Table Columns - Contract</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass Product Codes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QuoteDocumentGenerationSettings</label>
    <pluralLabel>QuoteDocumentGenerationSettings</pluralLabel>
</CustomObject>